# rpn-tools

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  MANIFEST  Make.current_job_wall_clock_time  Makefile  README.md  README.org  a2ps.c  a2ps_IRIX64  calc_crc.c_original  crackres.f90  filetyp.f  filetyp.f90  host_ip_address.c  ip1newstyle.ftn  kmw_to_pcl.c  kmwtohp_IRIX64  kmwtopcl_IRIX64  lpage_IRIX64  makebidon.f  makedir.c  nl2crlf.c  nl2crlf_IRIX64  outine.c  outine_IRIX64  process_watch.c  r.a2ps_Linux  r.basename_IRIX64  r.basename_Linux_alpha  r.crc.c  r.crc_old  r.crc_original  r.current_job_wall_clock_time.ftn  r.date.c  r.echo.c  r.echo_IRIX64  r.ip.c  r.ip1.c  r.isowner_IRIX64  (+14 more)
CUPS-FILTERS/: kmw.convs  kmw.types
ip1newstyle/: ip1newstyle.ftn
r.crc/: r.crc.c
r.date/: r.date.c
r.filetype/: Makefile
r.ip1/: Makefile
r.resetenv/trunk/: Makefile
src/ip1newstyle/: CMakeLists.txt  ip1newstyle.f90
src/misc/: CMakeLists.txt  Make.current_job_wall_clock_time  a2ps.c  arbre.c  grepdep.c  host_ip_address.c  kmwtohp.c  kmwtopcl.c  lpage.c  makedir.c  newdx.c  newdx.h  nl2crlf.c  outine.c  r.basename.c  r.echo.c  r.isowner.c  r.ls.c  r.microsleep.c  r.read_link.c  r.resetenv.c  r.seq.c  r.ucanrm.c  rrbx2ppm.f90  socket_wa_server.c  spliter.c  text2ps.c  traffic.c
src/r.crc/: CMakeLists.txt  calc_crc.c_original  r.crc.c
src/r.date/: CMakeLists.txt  r.date.c
src/r.filetype/: CMakeLists.txt  filetyp.f90
src/r.ip1/: CMakeLists.txt  r.ip.c
src/r.ip123/: CMakeLists.txt  r.ip123.f90
test/: expect-exit-code.sh
